# pre-commit-test-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pre-commit-test-hooks.yaml  README.md  setup.cfg
pre_commit_hooks/: check_branch.py  check_decorator_value.py  check_migration_tools.py  check_translation_file.py
pre_commit_hooks_funid/: check_decorator_value.py
pre_commit_test_hooks/: check_decorator_value.py
